--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <title>Search Wikipedia</title>
   <link href='https://fonts.googleapis.com/css?family=Philosopher:400,700' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="./main.css" rel="stylesheet" type="text/css">
