--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
 <head>
   <title>Search Wikipedia</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+
   <link href='https://fonts.googleapis.com/css?family=Philosopher:400,700' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="./main.css" rel="stylesheet" type="text/css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="./main.js"></script>
 
 </head>
 
 <body>
+
   <div id="panel-wrapper">
     <h1>Search Wikipedia</h1>
 
     <div id="search-field-tool">
-      <i id="search-icon" class="glyphicon glyphicon-search centered"></i>
+      <form id="search-form" action="javascript:searchWiki()" class="centered">
+        <input id="search-field" type="text" name="search">
+        <i id="search-icon" class="glyphicon glyphicon-search centered"></i>
+      </form>
     </div>
     <div>
       <svg id="svg-search-line">
         <line x1="0" y1="0" x2="400" y2="0" style="stroke:#FFFFFF;stroke-width:4"/>
       </svg>
     </div>
-    <div>
-      <span><a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank"><i id="random-icon" class="glyphicon glyphicon-random"></i></a></span>
-    </div>
+    <a class="random-link" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank"><i id="random-icon" class="glyphicon glyphicon-random"></i></a>
   </div>
   <div id="search-results"><!-- Content injected via jQuery --></div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="./main.js"></script>
 </body>
-  
+
+</html>
