--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 
-  <link href='https://fonts.googleapis.com/css?family=Philosopher:400,700' rel='stylesheet' type='text/css'>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="./main.css" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Philosopher|Overpass|Spectral' rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="./main.css" rel="stylesheet">
 
 </head>
 
@@ -21,7 +21,7 @@
     <div id="search-field-tool">
       <form id="search-form" action="javascript:searchWiki()" class="centered">
         <input id="search-field" type="text" name="search">
-        <i id="search-icon" class="glyphicon glyphicon-search centered"></i>
+        <i id="search-icon" class="fa fa-2x fa-search"></i>
       </form>
     </div>
     <div>
@@ -29,7 +29,7 @@
         <line x1="0" y1="0" x2="400" y2="0" style="stroke:#FFFFFF;stroke-width:4"/>
       </svg>
     </div>
-    <a class="random-link" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank"><i id="random-icon" class="glyphicon glyphicon-random"></i></a>
+    <a class="random-link" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank"><i id="random-icon" class="fa fa-2x fa-random"></i></a>
   </div>
   <div id="search-results"><!-- Content injected via jQuery --></div>
 
